parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID PUNTOCOMA prog
Rule 2     prog -> main
Rule 3     prog -> dec_vars dec_funciones main
Rule 4     prog -> dec_vars main
Rule 5     prog -> dec_funciones main
Rule 6     main -> PRINCIPAL PARENT_A PARENT_C dec_est
Rule 7     dec_vars -> VAR vars
Rule 8     vars -> tipo_simple ids_simple PUNTOCOMA
Rule 9     vars -> tipo_simple ids_simple PUNTOCOMA vars
Rule 10    tipo_simple -> INT
Rule 11    tipo_simple -> FLOAT
Rule 12    tipo_simple -> CHAR
Rule 13    ids_simple -> ID
Rule 14    ids_simple -> ID dimension
Rule 15    ids_simple -> ID COMA ids_simple
Rule 16    ids_simple -> ID dimension COMA ids_simple
Rule 17    dimension -> CORCHETE_A CTE_I CORCHETE_C
Rule 18    variable -> ID
Rule 19    variable -> ID dim
Rule 20    variables -> variable
Rule 21    variables -> variable COMA variables
Rule 22    dim -> CORCHETE_A expresion CORCHETE_C
Rule 23    dec_funciones -> funcion
Rule 24    dec_funciones -> funcion dec_funciones
Rule 25    funcion -> FUNCION tipo_simple ID func_dos
Rule 26    funcion -> FUNCION VOID ID func_dos
Rule 27    func_dos -> PARENT_A PARENT_C var_funcs
Rule 28    func_dos -> PARENT_A parametros PARENT_C var_funcs
Rule 29    var_funcs -> dec_est
Rule 30    var_funcs -> dec_vars dec_est
Rule 31    parametros -> tipo_simple variable
Rule 32    parametros -> tipo_simple variable COMA parametros
Rule 33    dec_est -> LLAVE_A LLAVE_C
Rule 34    dec_est -> LLAVE_A estatutos_dos LLAVE_C
Rule 35    estatutos -> asignacion PUNTOCOMA
Rule 36    estatutos -> llamada PUNTOCOMA
Rule 37    estatutos -> retorno PUNTOCOMA
Rule 38    estatutos -> lectura PUNTOCOMA
Rule 39    estatutos -> escritura PUNTOCOMA
Rule 40    estatutos -> decision
Rule 41    estatutos -> ciclo_for
Rule 42    estatutos -> ciclo_while
Rule 43    estatutos_dos -> estatutos
Rule 44    estatutos_dos -> estatutos estatutos_dos
Rule 45    asignacion -> variable IGUAL expresion
Rule 46    llamada -> ID PARENT_A PARENT_C
Rule 47    llamada -> ID PARENT_A expresiones PARENT_C
Rule 48    expresiones -> expresion
Rule 49    expresiones -> expresion COMA expresion
Rule 50    expresion -> t_expresion
Rule 51    expresion -> t_expresion OR expresion
Rule 52    t_expresion -> g_expresion
Rule 53    t_expresion -> g_expresion AND t_expresion
Rule 54    g_expresion -> m_expresion
Rule 55    g_expresion -> m_expresion op_logicos m_expresion
Rule 56    op_logicos -> MAYORQUE
Rule 57    op_logicos -> MENORQUE
Rule 58    op_logicos -> MAYORIGUAL
Rule 59    op_logicos -> MENORIGUAL
Rule 60    op_logicos -> IGUALIGUAL
Rule 61    op_logicos -> DIFERENTE
Rule 62    m_expresion -> termino
Rule 63    m_expresion -> termino MAS m_expresion
Rule 64    m_expresion -> termino MENOS m_expresion
Rule 65    termino -> factor
Rule 66    termino -> factor POR termino
Rule 67    termino -> factor DIV termino
Rule 68    factor -> PARENT_A expresion PARENT_C
Rule 69    factor -> CTE_I
Rule 70    factor -> CTE_F
Rule 71    factor -> CTE_CH
Rule 72    factor -> variable
Rule 73    factor -> llamada
Rule 74    retorno -> REGRESA PARENT_A expresion PARENT_C
Rule 75    lectura -> LEER PARENT_A variables PARENT_C
Rule 76    escritura -> ESCRIBIR PARENT_A escr PARENT_C
Rule 77    escritura_dos -> CTE_STR
Rule 78    escritura_dos -> expresion
Rule 79    escr -> escritura_dos
Rule 80    escr -> escritura_dos COMA escr
Rule 81    decision -> if
Rule 82    decision -> if else
Rule 83    if -> SI PARENT_A expresion PARENT_C ENTONCES LLAVE_A estatutos_dos LLAVE_C
Rule 84    else -> SINO LLAVE_A estatutos_dos LLAVE_C
Rule 85    ciclo_while -> MIENTRAS PARENT_A expresion PARENT_C HAZ LLAVE_A estatutos_dos LLAVE_C
Rule 86    ciclo_for -> DESDE variable IGUAL expresion HASTA expresion HACER LLAVE_A estatutos_dos LLAVE_C

Terminals, with rules where they appear

AND                  : 53
CHAR                 : 12
COMA                 : 15 16 21 32 49 80
CORCHETE_A           : 17 22
CORCHETE_C           : 17 22
CTE_CH               : 71
CTE_F                : 70
CTE_I                : 17 69
CTE_STR              : 77
DESDE                : 86
DIFERENTE            : 61
DIV                  : 67
ENTONCES             : 83
ESCRIBIR             : 76
FLOAT                : 11
FUNCION              : 25 26
HACER                : 86
HASTA                : 86
HAZ                  : 85
ID                   : 1 13 14 15 16 18 19 25 26 46 47
IGUAL                : 45 86
IGUALIGUAL           : 60
INT                  : 10
LEER                 : 75
LLAVE_A              : 33 34 83 84 85 86
LLAVE_C              : 33 34 83 84 85 86
MAS                  : 63
MAYORIGUAL           : 58
MAYORQUE             : 56
MENORIGUAL           : 59
MENORQUE             : 57
MENOS                : 64
MIENTRAS             : 85
OR                   : 51
PARENT_A             : 6 27 28 46 47 68 74 75 76 83 85
PARENT_C             : 6 27 28 46 47 68 74 75 76 83 85
POR                  : 66
PRINCIPAL            : 6
PROGRAMA             : 1
PUNTOCOMA            : 1 8 9 35 36 37 38 39
REGRESA              : 74
SI                   : 83
SINO                 : 84
VAR                  : 7
VOID                 : 26
error                : 

Nonterminals, with rules where they appear

asignacion           : 35
ciclo_for            : 41
ciclo_while          : 42
dec_est              : 6 29 30
dec_funciones        : 3 5 24
dec_vars             : 3 4 30
decision             : 40
dim                  : 19
dimension            : 14 16
else                 : 82
escr                 : 76 80
escritura            : 39
escritura_dos        : 79 80
estatutos            : 43 44
estatutos_dos        : 34 44 83 84 85 86
expresion            : 22 45 48 49 49 51 68 74 78 83 85 86 86
expresiones          : 47
factor               : 65 66 67
func_dos             : 25 26
funcion              : 23 24
g_expresion          : 52 53
ids_simple           : 8 9 15 16
if                   : 81 82
lectura              : 38
llamada              : 36 73
m_expresion          : 54 55 55 63 64
main                 : 2 3 4 5
op_logicos           : 55
parametros           : 28 32
prog                 : 1
programa             : 0
retorno              : 37
t_expresion          : 50 51 53
termino              : 62 63 64 66 67
tipo_simple          : 8 9 25 31 32
var_funcs            : 27 28
variable             : 20 21 31 32 45 72 86
variables            : 21 75
vars                 : 7 9

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID PUNTOCOMA prog

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID PUNTOCOMA prog

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . PUNTOCOMA prog

    PUNTOCOMA       shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID PUNTOCOMA . prog
    (2) prog -> . main
    (3) prog -> . dec_vars dec_funciones main
    (4) prog -> . dec_vars main
    (5) prog -> . dec_funciones main
    (6) main -> . PRINCIPAL PARENT_A PARENT_C dec_est
    (7) dec_vars -> . VAR vars
    (23) dec_funciones -> . funcion
    (24) dec_funciones -> . funcion dec_funciones
    (25) funcion -> . FUNCION tipo_simple ID func_dos
    (26) funcion -> . FUNCION VOID ID func_dos

    PRINCIPAL       shift and go to state 9
    VAR             shift and go to state 10
    FUNCION         shift and go to state 12

    prog                           shift and go to state 5
    main                           shift and go to state 6
    dec_vars                       shift and go to state 7
    dec_funciones                  shift and go to state 8
    funcion                        shift and go to state 11

state 5

    (1) programa -> PROGRAMA ID PUNTOCOMA prog .

    $end            reduce using rule 1 (programa -> PROGRAMA ID PUNTOCOMA prog .)


state 6

    (2) prog -> main .

    $end            reduce using rule 2 (prog -> main .)


state 7

    (3) prog -> dec_vars . dec_funciones main
    (4) prog -> dec_vars . main
    (23) dec_funciones -> . funcion
    (24) dec_funciones -> . funcion dec_funciones
    (6) main -> . PRINCIPAL PARENT_A PARENT_C dec_est
    (25) funcion -> . FUNCION tipo_simple ID func_dos
    (26) funcion -> . FUNCION VOID ID func_dos

    PRINCIPAL       shift and go to state 9
    FUNCION         shift and go to state 12

    dec_funciones                  shift and go to state 13
    main                           shift and go to state 14
    funcion                        shift and go to state 11

state 8

    (5) prog -> dec_funciones . main
    (6) main -> . PRINCIPAL PARENT_A PARENT_C dec_est

    PRINCIPAL       shift and go to state 9

    main                           shift and go to state 15

state 9

    (6) main -> PRINCIPAL . PARENT_A PARENT_C dec_est

    PARENT_A        shift and go to state 16


state 10

    (7) dec_vars -> VAR . vars
    (8) vars -> . tipo_simple ids_simple PUNTOCOMA
    (9) vars -> . tipo_simple ids_simple PUNTOCOMA vars
    (10) tipo_simple -> . INT
    (11) tipo_simple -> . FLOAT
    (12) tipo_simple -> . CHAR

    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    CHAR            shift and go to state 21

    vars                           shift and go to state 17
    tipo_simple                    shift and go to state 18

state 11

    (23) dec_funciones -> funcion .
    (24) dec_funciones -> funcion . dec_funciones
    (23) dec_funciones -> . funcion
    (24) dec_funciones -> . funcion dec_funciones
    (25) funcion -> . FUNCION tipo_simple ID func_dos
    (26) funcion -> . FUNCION VOID ID func_dos

    PRINCIPAL       reduce using rule 23 (dec_funciones -> funcion .)
    FUNCION         shift and go to state 12

    funcion                        shift and go to state 11
    dec_funciones                  shift and go to state 22

state 12

    (25) funcion -> FUNCION . tipo_simple ID func_dos
    (26) funcion -> FUNCION . VOID ID func_dos
    (10) tipo_simple -> . INT
    (11) tipo_simple -> . FLOAT
    (12) tipo_simple -> . CHAR

    VOID            shift and go to state 24
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    CHAR            shift and go to state 21

    tipo_simple                    shift and go to state 23

state 13

    (3) prog -> dec_vars dec_funciones . main
    (6) main -> . PRINCIPAL PARENT_A PARENT_C dec_est

    PRINCIPAL       shift and go to state 9

    main                           shift and go to state 25

state 14

    (4) prog -> dec_vars main .

    $end            reduce using rule 4 (prog -> dec_vars main .)


state 15

    (5) prog -> dec_funciones main .

    $end            reduce using rule 5 (prog -> dec_funciones main .)


state 16

    (6) main -> PRINCIPAL PARENT_A . PARENT_C dec_est

    PARENT_C        shift and go to state 26


state 17

    (7) dec_vars -> VAR vars .

    PRINCIPAL       reduce using rule 7 (dec_vars -> VAR vars .)
    FUNCION         reduce using rule 7 (dec_vars -> VAR vars .)
    LLAVE_A         reduce using rule 7 (dec_vars -> VAR vars .)


state 18

    (8) vars -> tipo_simple . ids_simple PUNTOCOMA
    (9) vars -> tipo_simple . ids_simple PUNTOCOMA vars
    (13) ids_simple -> . ID
    (14) ids_simple -> . ID dimension
    (15) ids_simple -> . ID COMA ids_simple
    (16) ids_simple -> . ID dimension COMA ids_simple

    ID              shift and go to state 28

    ids_simple                     shift and go to state 27

state 19

    (10) tipo_simple -> INT .

    ID              reduce using rule 10 (tipo_simple -> INT .)


state 20

    (11) tipo_simple -> FLOAT .

    ID              reduce using rule 11 (tipo_simple -> FLOAT .)


state 21

    (12) tipo_simple -> CHAR .

    ID              reduce using rule 12 (tipo_simple -> CHAR .)


state 22

    (24) dec_funciones -> funcion dec_funciones .

    PRINCIPAL       reduce using rule 24 (dec_funciones -> funcion dec_funciones .)


state 23

    (25) funcion -> FUNCION tipo_simple . ID func_dos

    ID              shift and go to state 29


state 24

    (26) funcion -> FUNCION VOID . ID func_dos

    ID              shift and go to state 30


state 25

    (3) prog -> dec_vars dec_funciones main .

    $end            reduce using rule 3 (prog -> dec_vars dec_funciones main .)


state 26

    (6) main -> PRINCIPAL PARENT_A PARENT_C . dec_est
    (33) dec_est -> . LLAVE_A LLAVE_C
    (34) dec_est -> . LLAVE_A estatutos_dos LLAVE_C

    LLAVE_A         shift and go to state 32

    dec_est                        shift and go to state 31

state 27

    (8) vars -> tipo_simple ids_simple . PUNTOCOMA
    (9) vars -> tipo_simple ids_simple . PUNTOCOMA vars

    PUNTOCOMA       shift and go to state 33


state 28

    (13) ids_simple -> ID .
    (14) ids_simple -> ID . dimension
    (15) ids_simple -> ID . COMA ids_simple
    (16) ids_simple -> ID . dimension COMA ids_simple
    (17) dimension -> . CORCHETE_A CTE_I CORCHETE_C

    PUNTOCOMA       reduce using rule 13 (ids_simple -> ID .)
    COMA            shift and go to state 35
    CORCHETE_A      shift and go to state 36

    dimension                      shift and go to state 34

state 29

    (25) funcion -> FUNCION tipo_simple ID . func_dos
    (27) func_dos -> . PARENT_A PARENT_C var_funcs
    (28) func_dos -> . PARENT_A parametros PARENT_C var_funcs

    PARENT_A        shift and go to state 38

    func_dos                       shift and go to state 37

state 30

    (26) funcion -> FUNCION VOID ID . func_dos
    (27) func_dos -> . PARENT_A PARENT_C var_funcs
    (28) func_dos -> . PARENT_A parametros PARENT_C var_funcs

    PARENT_A        shift and go to state 38

    func_dos                       shift and go to state 39

state 31

    (6) main -> PRINCIPAL PARENT_A PARENT_C dec_est .

    $end            reduce using rule 6 (main -> PRINCIPAL PARENT_A PARENT_C dec_est .)


state 32

    (33) dec_est -> LLAVE_A . LLAVE_C
    (34) dec_est -> LLAVE_A . estatutos_dos LLAVE_C
    (43) estatutos_dos -> . estatutos
    (44) estatutos_dos -> . estatutos estatutos_dos
    (35) estatutos -> . asignacion PUNTOCOMA
    (36) estatutos -> . llamada PUNTOCOMA
    (37) estatutos -> . retorno PUNTOCOMA
    (38) estatutos -> . lectura PUNTOCOMA
    (39) estatutos -> . escritura PUNTOCOMA
    (40) estatutos -> . decision
    (41) estatutos -> . ciclo_for
    (42) estatutos -> . ciclo_while
    (45) asignacion -> . variable IGUAL expresion
    (46) llamada -> . ID PARENT_A PARENT_C
    (47) llamada -> . ID PARENT_A expresiones PARENT_C
    (74) retorno -> . REGRESA PARENT_A expresion PARENT_C
    (75) lectura -> . LEER PARENT_A variables PARENT_C
    (76) escritura -> . ESCRIBIR PARENT_A escr PARENT_C
    (81) decision -> . if
    (82) decision -> . if else
    (86) ciclo_for -> . DESDE variable IGUAL expresion HASTA expresion HACER LLAVE_A estatutos_dos LLAVE_C
    (85) ciclo_while -> . MIENTRAS PARENT_A expresion PARENT_C HAZ LLAVE_A estatutos_dos LLAVE_C
    (18) variable -> . ID
    (19) variable -> . ID dim
    (83) if -> . SI PARENT_A expresion PARENT_C ENTONCES LLAVE_A estatutos_dos LLAVE_C

    LLAVE_C         shift and go to state 40
    ID              shift and go to state 52
    REGRESA         shift and go to state 53
    LEER            shift and go to state 54
    ESCRIBIR        shift and go to state 55
    DESDE           shift and go to state 57
    MIENTRAS        shift and go to state 58
    SI              shift and go to state 59

    estatutos_dos                  shift and go to state 41
    estatutos                      shift and go to state 42
    asignacion                     shift and go to state 43
    llamada                        shift and go to state 44
    retorno                        shift and go to state 45
    lectura                        shift and go to state 46
    escritura                      shift and go to state 47
    decision                       shift and go to state 48
    ciclo_for                      shift and go to state 49
    ciclo_while                    shift and go to state 50
    variable                       shift and go to state 51
    if                             shift and go to state 56

state 33

    (8) vars -> tipo_simple ids_simple PUNTOCOMA .
    (9) vars -> tipo_simple ids_simple PUNTOCOMA . vars
    (8) vars -> . tipo_simple ids_simple PUNTOCOMA
    (9) vars -> . tipo_simple ids_simple PUNTOCOMA vars
    (10) tipo_simple -> . INT
    (11) tipo_simple -> . FLOAT
    (12) tipo_simple -> . CHAR

    PRINCIPAL       reduce using rule 8 (vars -> tipo_simple ids_simple PUNTOCOMA .)
    FUNCION         reduce using rule 8 (vars -> tipo_simple ids_simple PUNTOCOMA .)
    LLAVE_A         reduce using rule 8 (vars -> tipo_simple ids_simple PUNTOCOMA .)
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    CHAR            shift and go to state 21

    tipo_simple                    shift and go to state 18
    vars                           shift and go to state 60

state 34

    (14) ids_simple -> ID dimension .
    (16) ids_simple -> ID dimension . COMA ids_simple

    PUNTOCOMA       reduce using rule 14 (ids_simple -> ID dimension .)
    COMA            shift and go to state 61


state 35

    (15) ids_simple -> ID COMA . ids_simple
    (13) ids_simple -> . ID
    (14) ids_simple -> . ID dimension
    (15) ids_simple -> . ID COMA ids_simple
    (16) ids_simple -> . ID dimension COMA ids_simple

    ID              shift and go to state 28

    ids_simple                     shift and go to state 62

state 36

    (17) dimension -> CORCHETE_A . CTE_I CORCHETE_C

    CTE_I           shift and go to state 63


state 37

    (25) funcion -> FUNCION tipo_simple ID func_dos .

    FUNCION         reduce using rule 25 (funcion -> FUNCION tipo_simple ID func_dos .)
    PRINCIPAL       reduce using rule 25 (funcion -> FUNCION tipo_simple ID func_dos .)


state 38

    (27) func_dos -> PARENT_A . PARENT_C var_funcs
    (28) func_dos -> PARENT_A . parametros PARENT_C var_funcs
    (31) parametros -> . tipo_simple variable
    (32) parametros -> . tipo_simple variable COMA parametros
    (10) tipo_simple -> . INT
    (11) tipo_simple -> . FLOAT
    (12) tipo_simple -> . CHAR

    PARENT_C        shift and go to state 64
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    CHAR            shift and go to state 21

    parametros                     shift and go to state 65
    tipo_simple                    shift and go to state 66

state 39

    (26) funcion -> FUNCION VOID ID func_dos .

    FUNCION         reduce using rule 26 (funcion -> FUNCION VOID ID func_dos .)
    PRINCIPAL       reduce using rule 26 (funcion -> FUNCION VOID ID func_dos .)


state 40

    (33) dec_est -> LLAVE_A LLAVE_C .

    $end            reduce using rule 33 (dec_est -> LLAVE_A LLAVE_C .)
    FUNCION         reduce using rule 33 (dec_est -> LLAVE_A LLAVE_C .)
    PRINCIPAL       reduce using rule 33 (dec_est -> LLAVE_A LLAVE_C .)


state 41

    (34) dec_est -> LLAVE_A estatutos_dos . LLAVE_C

    LLAVE_C         shift and go to state 67


state 42

    (43) estatutos_dos -> estatutos .
    (44) estatutos_dos -> estatutos . estatutos_dos
    (43) estatutos_dos -> . estatutos
    (44) estatutos_dos -> . estatutos estatutos_dos
    (35) estatutos -> . asignacion PUNTOCOMA
    (36) estatutos -> . llamada PUNTOCOMA
    (37) estatutos -> . retorno PUNTOCOMA
    (38) estatutos -> . lectura PUNTOCOMA
    (39) estatutos -> . escritura PUNTOCOMA
    (40) estatutos -> . decision
    (41) estatutos -> . ciclo_for
    (42) estatutos -> . ciclo_while
    (45) asignacion -> . variable IGUAL expresion
    (46) llamada -> . ID PARENT_A PARENT_C
    (47) llamada -> . ID PARENT_A expresiones PARENT_C
    (74) retorno -> . REGRESA PARENT_A expresion PARENT_C
    (75) lectura -> . LEER PARENT_A variables PARENT_C
    (76) escritura -> . ESCRIBIR PARENT_A escr PARENT_C
    (81) decision -> . if
    (82) decision -> . if else
    (86) ciclo_for -> . DESDE variable IGUAL expresion HASTA expresion HACER LLAVE_A estatutos_dos LLAVE_C
    (85) ciclo_while -> . MIENTRAS PARENT_A expresion PARENT_C HAZ LLAVE_A estatutos_dos LLAVE_C
    (18) variable -> . ID
    (19) variable -> . ID dim
    (83) if -> . SI PARENT_A expresion PARENT_C ENTONCES LLAVE_A estatutos_dos LLAVE_C

    LLAVE_C         reduce using rule 43 (estatutos_dos -> estatutos .)
    ID              shift and go to state 52
    REGRESA         shift and go to state 53
    LEER            shift and go to state 54
    ESCRIBIR        shift and go to state 55
    DESDE           shift and go to state 57
    MIENTRAS        shift and go to state 58
    SI              shift and go to state 59

    estatutos                      shift and go to state 42
    estatutos_dos                  shift and go to state 68
    asignacion                     shift and go to state 43
    llamada                        shift and go to state 44
    retorno                        shift and go to state 45
    lectura                        shift and go to state 46
    escritura                      shift and go to state 47
    decision                       shift and go to state 48
    ciclo_for                      shift and go to state 49
    ciclo_while                    shift and go to state 50
    variable                       shift and go to state 51
    if                             shift and go to state 56

state 43

    (35) estatutos -> asignacion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 69


state 44

    (36) estatutos -> llamada . PUNTOCOMA

    PUNTOCOMA       shift and go to state 70


state 45

    (37) estatutos -> retorno . PUNTOCOMA

    PUNTOCOMA       shift and go to state 71


state 46

    (38) estatutos -> lectura . PUNTOCOMA

    PUNTOCOMA       shift and go to state 72


state 47

    (39) estatutos -> escritura . PUNTOCOMA

    PUNTOCOMA       shift and go to state 73


state 48

    (40) estatutos -> decision .

    ID              reduce using rule 40 (estatutos -> decision .)
    REGRESA         reduce using rule 40 (estatutos -> decision .)
    LEER            reduce using rule 40 (estatutos -> decision .)
    ESCRIBIR        reduce using rule 40 (estatutos -> decision .)
    DESDE           reduce using rule 40 (estatutos -> decision .)
    MIENTRAS        reduce using rule 40 (estatutos -> decision .)
    SI              reduce using rule 40 (estatutos -> decision .)
    LLAVE_C         reduce using rule 40 (estatutos -> decision .)


state 49

    (41) estatutos -> ciclo_for .

    ID              reduce using rule 41 (estatutos -> ciclo_for .)
    REGRESA         reduce using rule 41 (estatutos -> ciclo_for .)
    LEER            reduce using rule 41 (estatutos -> ciclo_for .)
    ESCRIBIR        reduce using rule 41 (estatutos -> ciclo_for .)
    DESDE           reduce using rule 41 (estatutos -> ciclo_for .)
    MIENTRAS        reduce using rule 41 (estatutos -> ciclo_for .)
    SI              reduce using rule 41 (estatutos -> ciclo_for .)
    LLAVE_C         reduce using rule 41 (estatutos -> ciclo_for .)


state 50

    (42) estatutos -> ciclo_while .

    ID              reduce using rule 42 (estatutos -> ciclo_while .)
    REGRESA         reduce using rule 42 (estatutos -> ciclo_while .)
    LEER            reduce using rule 42 (estatutos -> ciclo_while .)
    ESCRIBIR        reduce using rule 42 (estatutos -> ciclo_while .)
    DESDE           reduce using rule 42 (estatutos -> ciclo_while .)
    MIENTRAS        reduce using rule 42 (estatutos -> ciclo_while .)
    SI              reduce using rule 42 (estatutos -> ciclo_while .)
    LLAVE_C         reduce using rule 42 (estatutos -> ciclo_while .)


state 51

    (45) asignacion -> variable . IGUAL expresion

    IGUAL           shift and go to state 74


state 52

    (46) llamada -> ID . PARENT_A PARENT_C
    (47) llamada -> ID . PARENT_A expresiones PARENT_C
    (18) variable -> ID .
    (19) variable -> ID . dim
    (22) dim -> . CORCHETE_A expresion CORCHETE_C

    PARENT_A        shift and go to state 75
    IGUAL           reduce using rule 18 (variable -> ID .)
    CORCHETE_A      shift and go to state 77

    dim                            shift and go to state 76

state 53

    (74) retorno -> REGRESA . PARENT_A expresion PARENT_C

    PARENT_A        shift and go to state 78


state 54

    (75) lectura -> LEER . PARENT_A variables PARENT_C

    PARENT_A        shift and go to state 79


state 55

    (76) escritura -> ESCRIBIR . PARENT_A escr PARENT_C

    PARENT_A        shift and go to state 80


state 56

    (81) decision -> if .
    (82) decision -> if . else
    (84) else -> . SINO LLAVE_A estatutos_dos LLAVE_C

    ID              reduce using rule 81 (decision -> if .)
    REGRESA         reduce using rule 81 (decision -> if .)
    LEER            reduce using rule 81 (decision -> if .)
    ESCRIBIR        reduce using rule 81 (decision -> if .)
    DESDE           reduce using rule 81 (decision -> if .)
    MIENTRAS        reduce using rule 81 (decision -> if .)
    SI              reduce using rule 81 (decision -> if .)
    LLAVE_C         reduce using rule 81 (decision -> if .)
    SINO            shift and go to state 82

    else                           shift and go to state 81

state 57

    (86) ciclo_for -> DESDE . variable IGUAL expresion HASTA expresion HACER LLAVE_A estatutos_dos LLAVE_C
    (18) variable -> . ID
    (19) variable -> . ID dim

    ID              shift and go to state 84

    variable                       shift and go to state 83

state 58

    (85) ciclo_while -> MIENTRAS . PARENT_A expresion PARENT_C HAZ LLAVE_A estatutos_dos LLAVE_C

    PARENT_A        shift and go to state 85


state 59

    (83) if -> SI . PARENT_A expresion PARENT_C ENTONCES LLAVE_A estatutos_dos LLAVE_C

    PARENT_A        shift and go to state 86


state 60

    (9) vars -> tipo_simple ids_simple PUNTOCOMA vars .

    PRINCIPAL       reduce using rule 9 (vars -> tipo_simple ids_simple PUNTOCOMA vars .)
    FUNCION         reduce using rule 9 (vars -> tipo_simple ids_simple PUNTOCOMA vars .)
    LLAVE_A         reduce using rule 9 (vars -> tipo_simple ids_simple PUNTOCOMA vars .)


state 61

    (16) ids_simple -> ID dimension COMA . ids_simple
    (13) ids_simple -> . ID
    (14) ids_simple -> . ID dimension
    (15) ids_simple -> . ID COMA ids_simple
    (16) ids_simple -> . ID dimension COMA ids_simple

    ID              shift and go to state 28

    ids_simple                     shift and go to state 87

state 62

    (15) ids_simple -> ID COMA ids_simple .

    PUNTOCOMA       reduce using rule 15 (ids_simple -> ID COMA ids_simple .)


state 63

    (17) dimension -> CORCHETE_A CTE_I . CORCHETE_C

    CORCHETE_C      shift and go to state 88


state 64
